deploy: 89142f437f905f926a08afc5dba0dd53ba7489a3

--- a/volumes/appendices/glossary.html
+++ b/volumes/appendices/glossary.html
@@ -307,7 +307,15 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">Table of contents</h2>
    
   <ul>
-  <li><a href="#under-construction" id="toc-under-construction" class="nav-link active" data-scroll-target="#under-construction"><span class="header-section-number">A.1</span> Under Construction</a></li>
+  <li><a href="#a" id="toc-a" class="nav-link active" data-scroll-target="#a"><span class="header-section-number">A.1</span> A</a></li>
+  <li><a href="#b" id="toc-b" class="nav-link" data-scroll-target="#b"><span class="header-section-number">A.2</span> B</a></li>
+  <li><a href="#c" id="toc-c" class="nav-link" data-scroll-target="#c"><span class="header-section-number">A.3</span> C</a></li>
+  <li><a href="#d" id="toc-d" class="nav-link" data-scroll-target="#d"><span class="header-section-number">A.4</span> D</a></li>
+  <li><a href="#h" id="toc-h" class="nav-link" data-scroll-target="#h"><span class="header-section-number">A.5</span> H</a></li>
+  <li><a href="#m" id="toc-m" class="nav-link" data-scroll-target="#m"><span class="header-section-number">A.6</span> M</a></li>
+  <li><a href="#p" id="toc-p" class="nav-link" data-scroll-target="#p"><span class="header-section-number">A.7</span> P</a></li>
+  <li><a href="#s" id="toc-s" class="nav-link" data-scroll-target="#s"><span class="header-section-number">A.8</span> S</a></li>
+  <li><a href="#t" id="toc-t" class="nav-link" data-scroll-target="#t"><span class="header-section-number">A.9</span> T</a></li>
   </ul>
 <div class="toc-actions"><ul><li><a href="https://github.com/celestial-curia/master-book/edit/main/volumes/appendices/glossary.qmd" class="toc-action"><i class="bi bi-github"></i>Edit this page</a></li><li><a href="https://github.com/celestial-curia/master-book/issues/new" class="toc-action"><i class="bi empty"></i>Report an issue</a></li></ul></div></nav>
     </div>
@@ -333,12 +341,51 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<blockquote class="blockquote">
-<p>[!NOTE] Definitions of key terms.</p>
-</blockquote>
-<section id="under-construction" class="level2" data-number="A.1">
-<h2 data-number="A.1" class="anchored" data-anchor-id="under-construction"><span class="header-section-number">A.1</span> Under Construction</h2>
-<p>This chapter is currently being drafted.</p>
+<section id="a" class="level2" data-number="A.1">
+<h2 data-number="A.1" class="anchored" data-anchor-id="a"><span class="header-section-number">A.1</span> A</h2>
+<p><strong>Alcocoden</strong>: The “Giver of Years.” A planet bound to the Hyleg that determines the potential lifespan of the native.</p>
+<p><strong>Almuten</strong>: The “Winner” or “Victor.” The planet that possesses the most essential and accidental dignity at a specific degree or in a chart.</p>
+<p><strong>Anareta</strong>: The “Killing Planet” or “Destroyer.” A planet (usually a malefic) that threatens the life of the native when directing to the Hyleg.</p>
+</section>
+<section id="b" class="level2" data-number="A.2">
+<h2 data-number="A.2" class="anchored" data-anchor-id="b"><span class="header-section-number">A.2</span> B</h2>
+<p><strong>Besiegement</strong>: A condition where a planet is placed between two malefics (Mars and Saturn) without the protection of a benefic aspect.</p>
+<p><strong>Bonification</strong>: The process by which a planet is strengthened or “improved” by the aspect or reception of a benefic.</p>
+</section>
+<section id="c" class="level2" data-number="A.3">
+<h2 data-number="A.3" class="anchored" data-anchor-id="c"><span class="header-section-number">A.3</span> C</h2>
+<p><strong>Cazimi</strong>: “In the Heart of the Sun.” A planet located within 17 minutes of arc of the Sun. It is considered immensely strengthened.</p>
+<p><strong>Chronocrator</strong>: “Time-Lord.” A planet that rules a specific period of the native’s life (e.g., in Firdaria or Zodiacal Releasing).</p>
+<p><strong>Combustion</strong>: A debilitating condition where a planet is within 8.5 degrees of the Sun, being burned by its rays.</p>
+</section>
+<section id="d" class="level2" data-number="A.4">
+<h2 data-number="A.4" class="anchored" data-anchor-id="d"><span class="header-section-number">A.4</span> D</h2>
+<p><strong>Doryphory</strong>: “Spearbearer.” A planet that rises before the Sun (in a day chart) or Moon (in a night chart), acting as a bodyguard.</p>
+<p><strong>Dodecatemoria</strong>: A 12th-part subdivision of a zodiacal sign.</p>
+</section>
+<section id="h" class="level2" data-number="A.5">
+<h2 data-number="A.5" class="anchored" data-anchor-id="h"><span class="header-section-number">A.5</span> H</h2>
+<p><strong>Hayz</strong>: A condition of superior dignity where a diurnal planet is in a diurnal sign and above the horizon during the day (or nocturnal equivalent).</p>
+<p><strong>Hyleg</strong>: The “Giver of Life.” A specific planet or point (such as the Sun, Moon, or Ascendant) that carries the vital force of the native.</p>
+</section>
+<section id="m" class="level2" data-number="A.6">
+<h2 data-number="A.6" class="anchored" data-anchor-id="m"><span class="header-section-number">A.6</span> M</h2>
+<p><strong>Maltreatment</strong>: Conditions that harm a planet, such as combustion, opposition to malefics, or being in the 6th, 8th, or 12th house.</p>
+<p><strong>Monomoiria</strong>: The ruler of an individual degree of the zodiac.</p>
+</section>
+<section id="p" class="level2" data-number="A.7">
+<h2 data-number="A.7" class="anchored" data-anchor-id="p"><span class="header-section-number">A.7</span> P</h2>
+<p><strong>Profection</strong>: A timing technique that moves the Ascendant (and other points) forward by one sign per year to determine the Lord of the Year.</p>
+<p><strong>Peregrine</strong>: A planet that lacks any essential dignity (no rulership, exaltation, triplicity, term, or face) in its current position.</p>
+</section>
+<section id="s" class="level2" data-number="A.8">
+<h2 data-number="A.8" class="anchored" data-anchor-id="s"><span class="header-section-number">A.8</span> S</h2>
+<p><strong>Sect</strong>: The division of planets into two teams: Diurnal (Sun, Jupiter, Saturn) and Nocturnal (Moon, Venus, Mars).</p>
+</section>
+<section id="t" class="level2" data-number="A.9">
+<h2 data-number="A.9" class="anchored" data-anchor-id="t"><span class="header-section-number">A.9</span> T</h2>
+<p><strong>Thema Mundi</strong>: The mythical birth chart of the universe, with Cancer rising, Sun in Leo, etc., used as the rationale for planetary rulerships.</p>
+<p><strong>Triplicity</strong>: A group of three signs of the same element (Fire, Earth, Air, Water).</p>
 
 
 </section>
