--- a/volumes/appendices/tables.html
+++ b/volumes/appendices/tables.html
@@ -306,7 +306,9 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">Table of contents</h2>
    
   <ul>
-  <li><a href="#under-construction" id="toc-under-construction" class="nav-link active" data-scroll-target="#under-construction"><span class="header-section-number">B.1</span> Under Construction</a></li>
+  <li><a href="#table-of-essential-dignities" id="toc-table-of-essential-dignities" class="nav-link active" data-scroll-target="#table-of-essential-dignities"><span class="header-section-number">B.1</span> Table of Essential Dignities</a></li>
+  <li><a href="#the-chaldean-order-planetary-spheres" id="toc-the-chaldean-order-planetary-spheres" class="nav-link" data-scroll-target="#the-chaldean-order-planetary-spheres"><span class="header-section-number">B.2</span> The Chaldean Order (Planetary Spheres)</a></li>
+  <li><a href="#the-egyptian-terms-bounds" id="toc-the-egyptian-terms-bounds" class="nav-link" data-scroll-target="#the-egyptian-terms-bounds"><span class="header-section-number">B.3</span> The Egyptian Terms (Bounds)</a></li>
   </ul>
 <div class="toc-actions"><ul><li><a href="https://github.com/celestial-curia/master-book/edit/main/volumes/appendices/tables.qmd" class="toc-action"><i class="bi bi-github"></i>Edit this page</a></li><li><a href="https://github.com/celestial-curia/master-book/issues/new" class="toc-action"><i class="bi empty"></i>Report an issue</a></li></ul></div></nav>
     </div>
@@ -332,12 +334,145 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
+<section id="table-of-essential-dignities" class="level2" data-number="B.1">
+<h2 data-number="B.1" class="anchored" data-anchor-id="table-of-essential-dignities"><span class="header-section-number">B.1</span> Table of Essential Dignities</h2>
+<table class="caption-top table">
+<colgroup>
+<col style="width: 16%">
+<col style="width: 16%">
+<col style="width: 16%">
+<col style="width: 16%">
+<col style="width: 16%">
+<col style="width: 16%">
+</colgroup>
+<thead>
+<tr class="header">
+<th style="text-align: left;">Sign</th>
+<th style="text-align: left;">Domicile (Ruler)</th>
+<th style="text-align: left;">Exaltation</th>
+<th style="text-align: left;">Triplicity (Day/Night)</th>
+<th style="text-align: left;">Detriment</th>
+<th style="text-align: left;">Fall</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;"><strong>Aries</strong></td>
+<td style="text-align: left;">Mars</td>
+<td style="text-align: left;">Sun (19°)</td>
+<td style="text-align: left;">Sun / Jupiter</td>
+<td style="text-align: left;">Venus</td>
+<td style="text-align: left;">Saturn</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"><strong>Taurus</strong></td>
+<td style="text-align: left;">Venus</td>
+<td style="text-align: left;">Moon (3°)</td>
+<td style="text-align: left;">Venus / Moon</td>
+<td style="text-align: left;">Mars</td>
+<td style="text-align: left;">N/A</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><strong>Gemini</strong></td>
+<td style="text-align: left;">Mercury</td>
+<td style="text-align: left;">N/A</td>
+<td style="text-align: left;">Saturn / Mercury</td>
+<td style="text-align: left;">Jupiter</td>
+<td style="text-align: left;">N/A</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"><strong>Cancer</strong></td>
+<td style="text-align: left;">Moon</td>
+<td style="text-align: left;">Jupiter (15°)</td>
+<td style="text-align: left;">Venus / Mars</td>
+<td style="text-align: left;">Saturn</td>
+<td style="text-align: left;">Mars</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><strong>Leo</strong></td>
+<td style="text-align: left;">Sun</td>
+<td style="text-align: left;">N/A</td>
+<td style="text-align: left;">Sun / Jupiter</td>
+<td style="text-align: left;">Saturn</td>
+<td style="text-align: left;">N/A</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"><strong>Virgo</strong></td>
+<td style="text-align: left;">Mercury</td>
+<td style="text-align: left;">Mercury (15°)</td>
+<td style="text-align: left;">Venus / Moon</td>
+<td style="text-align: left;">Jupiter</td>
+<td style="text-align: left;">Venus</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><strong>Libra</strong></td>
+<td style="text-align: left;">Venus</td>
+<td style="text-align: left;">Saturn (21°)</td>
+<td style="text-align: left;">Saturn / Mercury</td>
+<td style="text-align: left;">Mars</td>
+<td style="text-align: left;">Sun</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"><strong>Scorpio</strong></td>
+<td style="text-align: left;">Mars</td>
+<td style="text-align: left;">N/A</td>
+<td style="text-align: left;">Venus / Mars</td>
+<td style="text-align: left;">Venus</td>
+<td style="text-align: left;">Moon</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><strong>Sagittarius</strong></td>
+<td style="text-align: left;">Jupiter</td>
+<td style="text-align: left;">N/A</td>
+<td style="text-align: left;">Sun / Jupiter</td>
+<td style="text-align: left;">Mercury</td>
+<td style="text-align: left;">N/A</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"><strong>Capricorn</strong></td>
+<td style="text-align: left;">Saturn</td>
+<td style="text-align: left;">Mars (28°)</td>
+<td style="text-align: left;">Venus / Moon</td>
+<td style="text-align: left;">Moon</td>
+<td style="text-align: left;">Jupiter</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><strong>Aquarius</strong></td>
+<td style="text-align: left;">Saturn</td>
+<td style="text-align: left;">N/A</td>
+<td style="text-align: left;">Saturn / Mercury</td>
+<td style="text-align: left;">Sun</td>
+<td style="text-align: left;">N/A</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"><strong>Pisces</strong></td>
+<td style="text-align: left;">Jupiter</td>
+<td style="text-align: left;">Venus (27°)</td>
+<td style="text-align: left;">Venus / Mars</td>
+<td style="text-align: left;">Mercury</td>
+<td style="text-align: left;">Mercury</td>
+</tr>
+</tbody>
+</table>
 <blockquote class="blockquote">
-<p>[!NOTE] Essential dignity and years tables.</p>
+<p><em>Note: Triplicity rulers listed follow the Dorothean system.</em></p>
 </blockquote>
-<section id="under-construction" class="level2" data-number="B.1">
-<h2 data-number="B.1" class="anchored" data-anchor-id="under-construction"><span class="header-section-number">B.1</span> Under Construction</h2>
-<p>This chapter is currently being drafted.</p>
+</section>
+<section id="the-chaldean-order-planetary-spheres" class="level2" data-number="B.2">
+<h2 data-number="B.2" class="anchored" data-anchor-id="the-chaldean-order-planetary-spheres"><span class="header-section-number">B.2</span> The Chaldean Order (Planetary Spheres)</h2>
+<ol type="1">
+<li><strong>Saturn</strong> (Slowest / Outermost)</li>
+<li><strong>Jupiter</strong></li>
+<li><strong>Mars</strong></li>
+<li><strong>Sun</strong></li>
+<li><strong>Venus</strong></li>
+<li><strong>Mercury</strong></li>
+<li><strong>Moon</strong> (Fastest / Sublunar)</li>
+</ol>
+</section>
+<section id="the-egyptian-terms-bounds" class="level2" data-number="B.3">
+<h2 data-number="B.3" class="anchored" data-anchor-id="the-egyptian-terms-bounds"><span class="header-section-number">B.3</span> The Egyptian Terms (Bounds)</h2>
+<p><em>Refer to Valens, Anthology, Book I for the complete table of unequal sign divisions.</em></p>
 
 
 </section>
