--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="author" content="Celestial Curia Research Group">
+<meta name="author" content="Andrew Darcy">
 <meta name="dcterms.date" content="2025-12-29">
 
 <title>The Celestial Curia</title>
@@ -151,7 +151,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Author</div>
     <div class="quarto-title-meta-contents">
-             <p>Celestial Curia Research Group </p>
+             <p>Andrew Darcy </p>
           </div>
   </div>
     
@@ -172,9 +172,22 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="preface" class="level1 unnumbered">
 <h1 class="unnumbered">Preface</h1>
+<div class="callout callout-style-default callout-note callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+<span class="screen-reader-only">Note</span>A Note on Methodology
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>This work was researched and compiled with the assistance of artificial intelligence tools. AI was used to help synthesize classical astrological sources, organize reference material, and structure the comprehensive tables contained herein. All content has been reviewed and curated by the author.</p>
+</div>
+</div>
 <p>The documents assembled herein represent a comprehensive synthesis of pre-1700 astrological tradition, reconstructed for the modern practitioner. This work moves beyond surface-level descriptions to explore the specific mechanisms of chart construction, the divergence of zodiacal systems, the intricate mathematics of predictive techniques, and the philosophical systems that sustain them.</p>
 <p>From the ziggurats of Babylon to the courts of Renaissance Europe, astrology has functioned as a “high science,” a tool of statecraft, and a psychological mirror. This Master Book aims to deconstruct the “celestial machine” that has governed human perception of destiny for four millennia, reframing the planets not merely as symbols, but as active “Ministers” in a Celestial Court.</p>
-<p><strong>The Celestial Curia Research Group</strong></p>
+<p><strong>Andrew Darcy</strong></p>
 
 
 </section>
